--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 
 <body>
 
-	<h2> In this shop you will find as many chocolate fountains you want</h2>
+	<h2> In this shop you will find everything a girl is dreaming about</h2>
 	<h1>IN EVERY SIZE YOU WANT</h1>
-	<a href="home.html">Let's find your perfect chocolate fountain</a>
+	<a href="home.html">Let's find your perfect outfit</a>
 
 
 
