--- a/home.html
+++ b/home.html
@@ -2,15 +2,18 @@
 <html>
 <head>
 	<title> Home Page </title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 
 </head>
 <body>
-	<h1>Welcome to the world of chocolate fountain</h1>
-	<h2>Here you will find chocolate fountains that abed can't resist</h2>
-	<h3>YUMMMMYYYYYYY</h3>
+	<h1 id="header" style="font-size:300%;">JEEM</h1>
+	<h2 id= "byyee"> Here you will find modern Clothes that you can't resist</h2>
 	<a href="about.html">This is a link for about</a>
 
-	<a href="https://www.ebay.com/c/1800650559"><img src="chcolate.jpeg"></a>
+	<a href="picture.html">lets shop!</a>
+	<img src="photo.jpg" hidth="300" height="350" class="center">
+
 
 
 
