--- a/home.html
+++ b/home.html
@@ -10,11 +10,8 @@
 	<h1 id="header" style="font-size:300%;">JEEM</h1>
 	<h2 id= "byyee"> Here you will find modern Clothes that you can't resist</h2>
 	<a href="about.html">This is a link for about</a>
-
-	<a href="picture.html">lets shop!</a>
 	<img src="photo.jpg" hidth="300" height="350" class="center">
-
-
+    <a href="picture.html">Let's find your perfect outfit</a>
 
 
 
