--- a/picture.html
+++ b/picture.html
@@ -7,7 +7,13 @@
 
 </head>
 <body>
-	<img src="photo.jpg" hidht="500" height="350">
+	<img src="Tshirts.jpg" hidht="500" height="350">
+	<h3 id="heading">T-shirts</h3>
+	<img  src="jeans.jpg" hidht="500" height="350">
+	<h3 id ="heading2">Jeans</h3>
+
+
+
 
 
 
