--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPEhtml>
 <html>
 <head>
-	<title>My First Awesome Webpage</title>
+	<script src="blabla.js"></script>
+   
 </head>
 <body>
-	<p> I want a chocolate fountain</p>
-
+    <h1>Hello World</h1> 
+    <p>My paragraph</p>
 </body>
 </html>
+
