--- a/project.html
+++ b/project.html
@@ -1,38 +1,63 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<h1> Karma</h1>
-    <script>
-      
-    function myFunction() {
-	    document.getElementById("p1").innerHTML = "You gave her money but she asks for more";
-		document.getElementById("demo").innerHTML = "give her";
-		document.getElementById("fun").innerHTML = "Nah, I'm broke"; 
-		document.getElementById("demo").addEventListener("onclick",Fire); 
+<title >third page</title>
+<link rel="stylesheet" type="text/css" href="project.css"> 
+<script > 
 
-	}
+function myFunction() {
+	window.location.href= "https://www.bbcgoodfood.com/recipes/best-ever-chocolate-brownies-recipe"
+         }
+function myFunction1() {
+	window.location.href= "https://www.bbcgoodfood.com/recipes/brilliant-banana-loaf"
+         }	
+function myFunction2() {
+	window.location.href= "https://www.bbcgoodfood.com/recipes/cherry-almond-lemon-mascarpone-tart"
+         }	
+function myFunction3() {
+	window.location.href= "https://www.bbcgoodfood.com/recipes/apple-walnut-marmalade"
+         }	
+function myFunction4() {
+	window.location.href= "https://tasty.co/recipe/paleo-cinnamon-roll-bites"
+         }
+function myFunction5() {
+	window.location.href= "https://tasty.co/recipe/peanut-butter-cup-cookies"
+         }
+function myFunction6() {
+	window.location.href= "https://tasty.co/recipe/raspberry-poppyseed-linzer-cookies"
+         }
+function myFunction7() {
+	window.location.href= "https://tasty.co/recipe/espresso-martini-ice-cream-sandwiches"
+         }	 	          	 	        	
+         </script>  
+<head/>
+<body>
 
-	function my(){
-		document.getElementById("p1").innerHTML = "You have skipped the beggar and 3 seconds later you see a plane crash"; 
-		document.getElementById("demo").innerHTML = "Go back to her";
-		document.getElementById("fun").innerHTML = "continue";
-	}
+<h1 id="hi"> Please choose an available ingredient </h1>
+ <h2>
+Dark Chocolate: <input id="myCheck" type="checkbox" onclick="myFunction()">
+</h2>
+<h2>
+Banana: <input id="myCheck" type="checkbox" onclick="myFunction1()">
+</h2>
+<h2>
+Cherry & almond: <input id="myCheck" type="checkbox" onclick="myFunction2()">
+</h2>
+<h2>
+Apples & Walnut: <input id="myCheck" type="checkbox" onclick="myFunction3()">
+</h2>
+<h2>
+Cinnamon: <input id="myCheck" type="checkbox" onclick="myFunction4()">
+</h2>
+<h2>
+Peanut butter: <input id="myCheck" type="checkbox" onclick="myFunction5()">
+</h2>
+<h2>
+Rapberry: <input id="myCheck" type="checkbox" onclick="myFunction6()">
+</h2>
+<h2>
+Coffee: <input id="myCheck" type="checkbox" onclick="myFunction7()">
+</h2>
 
-	function Fire(){
-		
-	}
-
-
-    </script>
-</head>
-<body style="text-align:center">
-	<p id ="p1">You are walking and you see a beggar</p>
-    <button id="demo" onclick="myFunction()">Help her!</button> 
-    <button id="fun" onclick="my()" type="button" style="">Skip her!</button>
-  <!-- <img src="beggar.jpg"> -->
- 	
-
-
-   
 </body>
-</html>
+</html> 
